# zerauth

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .inferconfig  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  DLEQ.md  Readme.md  cppcheck-suppressions-list.txt  index.html  readme.md
.devcontainer/: postCreateCommand.sh
cmake/: FlatBuffGen.cmake  IPO.cmake
fido2/: app.py  assertion.json  attestation.json  chalenge.json
fido2/templates/: fast-api.py  http-server.py  index-backup.html  index.html
flatb/: commitment.fbs  proving_phase.fbs  setup_phase.fbs  transient.fbs
lattices/: blake3.hpp  lattice_zkp.cpp  main-blake.cpp
src/: LE.cpp  zerauth.cpp
src/flatbuffer/: commitment_generated.h  proving_phase_generated.h  setup_phase_generated.h
src/flatbuffers/: transient_generated.h
src/lib/: concepts.hpp  crypto_tools.hpp  discrete_logarithm.cpp  discrete_logarithm.hpp  macro_tools.hpp  tools.cpp  tools.hpp
stark/: Cargo.toml  Doc.md  README.md  SECURITY.md  SECURITY_AUDIT.md  check_ffi.c  index-2.html  index.html  readme.md
stark/include/: stark_password_proof.h
stark/src/: lib.rs
web/: index.html  index.js
zone/: build.zig  build.zig.zon  run.sh
zone/src/: main.zig  root.zig  wasm.zig
zone/web/: index.html
