[package]
name = "stark-password-proof"
version = "0.1.0"
edition = "2021"

# "cdylib" is required for WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# plonky2 = "1.1.0"
anyhow = "1.0"
# wasm-bindgen = "0.2.106" # For browser support
plonky2 = { version = "1.1.0" }

postcard = { version = "1.0", features = ["alloc"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
# WASM Interop
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
console_error_panic_hook = "0.1" # Good for debugging in browser console

# CRITICAL: getrandom configuration for WASM
# Plonky2 uses randomness. Browsers don't have standard OS randomness.
# We must enable "js" feature so it uses the browser's crypto API.
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
# Optimizations to make the WASM file smaller and faster
lto = true
opt-level = 3
