[package]
name = "stark-password-proof"
version = "0.1.0"
edition = "2021"

# "cdylib" is required for WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
argon2 = { version = "0.5", default-features = false, features = ["std"] }
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# Plonky3 Dependencies
p3-field = "0.1.0"
p3-goldilocks = "0.1.0"
p3-uni-stark = "0.1.0"
p3-air = "0.1.0"
p3-challenger = "0.1.0"
p3-poseidon = "0.1.0"
p3-symmetric = "0.1.0"
p3-matrix = "0.1.0"
p3-maybe-rayon = "0.1.0"
p3-commit = "0.1.0"
p3-merkle-tree = "0.1.0"
p3-keccak = "0.1.0"
p3-poseidon2 = "0.1.0"
p3-dft = "0.1.0"
p3-fri = "0.1.0"

[profile.release]
lto = true
opt-level = 3
