[package]
name = "stark-password-proof"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core Cryptography
argon2 = "0.5"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
anyhow = "1.0"

# Plonky3 Ecosystem
p3-field = "0.4.2"
p3-goldilocks = "0.4.2"
p3-matrix = "0.4.2"
p3-air = "0.4.2"
p3-uni-stark = "0.4.2"
p3-challenger = "0.4.2"
p3-dft = "0.4.2"
p3-fri = "0.4.2"
p3-poseidon2 = "0.4.2"
p3-symmetric = "0.4.2"
p3-merkle-tree = "0.4.2"
p3-poseidon = "0.4.2"
p3-keccak = "0.4.2"
p3-commit = "0.4.2"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["native"]
native = []
wasm = []

[profile.release]
lto = true
opt-level = 3
panic = "unwind" # Necessary for catch_unwind to work!
